@@ -18,6 +18,7 @@ Jump Start Changelog
 * Improvement: Design enhancements for Magnific Popup lightbox navigation.
 * Improvement: Better mobile fallback for parallax background images.
 * Improvement: Redesign of Team Member element.
+* Improvement: With a hero unit, when selecting to bold text, a header tag will now be used, allowing for more flexibility in fonts used.
 * Improvement: More default spacing between elements in custom layouts.
 * Updated: FontAwesome to 4.5.
 * Updated: FlexSlider to 2.6.
